[gd_scene load_steps=8 format=2]

[ext_resource path="res://World/Objects/Nature/Trees/TreeBranchObject.gd" type="Script" id=1]
[ext_resource path="res://Assets/Images/tree_sets/branch_objects/branch2.png" type="Texture" id=2]
[ext_resource path="res://World/Objects/Nature/Effects/HoedDirt.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 18.8889, 21.1112 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 18.8289, 21.1111 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MovementCollisionBox2/movementCollisionBox:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BranchHurtBox/branchHurtBox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Branch:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "break"
tracks/0/type = "value"
tracks/0/path = NodePath("MovementCollisionBox2/movementCollisionBox:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BranchHurtBox/branchHurtBox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Branch:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="TreeBranchObject" type="Node2D"]
scale = Vector2( 0.9, 0.9 )
script = ExtResource( 1 )

[node name="WoodBreak" parent="." instance=ExtResource( 3 )]

[node name="Branch" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="MovementCollisionBox2" type="StaticBody2D" parent="."]
position = Vector2( 2, -18 )

[node name="movementCollisionBox" type="CollisionShape2D" parent="MovementCollisionBox2"]
position = Vector2( -1.99998, 22.4444 )
rotation = -1.5708
shape = SubResource( 6 )

[node name="BranchHurtBox" type="Area2D" parent="."]
position = Vector2( 0, -20 )
collision_layer = 8
collision_mask = 0

[node name="branchHurtBox" type="CollisionShape2D" parent="BranchHurtBox"]
position = Vector2( 1.57763e-05, 24.5045 )
rotation = -1.5708
shape = SubResource( 5 )

[node name="SoundEffects" type="AudioStreamPlayer2D" parent="."]
visible = false
volume_db = -12.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/break = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( -3.57628e-07, 1.11111 )
scale = Vector2( 2.33333, 2.55556 )

[node name="NavigationObstacle2D" type="NavigationObstacle2D" parent="."]
estimate_radius = false
radius = 30.0

[connection signal="area_entered" from="BranchHurtBox" to="." method="_on_BranchHurtBox_area_entered"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
